logs/Slang/chapter-6/6.24.2--cast_task.sv.log
name: cast_task
description: $cast task
should_fail: 0
tags: 6.24.2 8.16
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.24.2--cast_task.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.24.2--cast_task.sv:10:3: error: use of undeclared identifier '$cast'
		$cast(a, 2.1 * 3.7);
		^~~~~
